--- a/CSS/main.css
+++ b/CSS/main.css
@@ -109,18 +109,34 @@ input[type="text"]{
 }
 .container-three{
     width: 100%;
-    height: 600px;
-    background-color: #E9EBE6;
+    height: 800px;
     position: relative;
     margin-top: 380px;
     text-align: center;
 }
+.container-three p{
+    font-size: 0.8em;
+}
+.container-three img{
+    box-shadow: 0px 2px 20px #aaaaaa;
+    border: 0px;
+}
+.person{
+    margin-top: 50px;
+}
 .first-person{
     float: left;
+    margin-left: 250px;
+    text-align: left;
 }
 .second-person{
     float: left;
+    margin-top: 80px;
+    margin-left: 525px;
+    position: absolute;
 }
 .third-person{
-    float: right;
+    float: left;
+    margin-left: 250px;
+    text-align: right;
 }
