--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,11 +5,15 @@ body{
 }
 nav{
     display: flex;
-    height: 65px;
+    height: auto;
+    /*position: fixed;*/
+    width: 100%;
+    background-color: white;
 }
 ul{
     display: flex;
-    margin-left: 25%;
+    flex-direction: row;
+    margin-left: 22%;
 }
 li{
     list-style-type: none;
@@ -23,13 +27,29 @@ nav h4{
     padding: 0px;
     margin-left: 40px;
 }
+@media screen and (max-width: 800px){
+    ul{
+        margin-left: 0px;
+    }
+    li{
+        font-size: 0.6em;
+        margin-left: 10px;
+        margin-top: 5px;
+    }
+}
 .container-one{
+    /*
     width: 100%;
-    height: 605px;
+    height: 605px;*/
     background-image: url("/img/another.png");
     background-size: cover;
+    max-width: 100%;
+    display: block;
+    height: auto;
 }
+
 .content{
+    margin: auto;
     padding-top: 200px;
     text-align: center;
 }
@@ -48,6 +68,16 @@ nav h4{
     border: 0px;
     border-radius: 50px;
 }
+@media screen and (max-width: 800px){
+    .container-one{
+        background-size: cover;
+        background-repeat: no-repeat;
+        max-width: 100%;
+        display: block;
+        height: auto;
+    }
+    
+}
 .right-img{
     margin-top:  5px;
     margin-left: 5px;
@@ -61,9 +91,7 @@ nav h4{
 .container-two{
     width: 100%;
     height: 380px;
-    background-color: #E9EBE6;
-    margin: 0px;
-    padding: 0px;
+    /*background-color: #E9EBE6;*/
     position: absolute;
     text-align: center;
 }
@@ -72,11 +100,18 @@ nav h4{
     height: 240px;
     background-color: white;
     text-align: center;
-    margin-left: 370px;
     padding-top: 50px;
-    margin-top: 40px;
+    margin: auto;
+    margin-top: 50px;
     box-shadow: 0px 2px 25px #aaaaaa;
     border-radius: 2px;
+}
+@media screen and (max-width: 800px){
+    .search-container{
+        width: 90%;
+        height: 60%;
+    }
+    
 }
 input[type="text"]{
     text-align: center;
@@ -109,7 +144,7 @@ input[type="text"]{
 }
 .container-three{
     width: 100%;
-    height: 800px;
+    height: auto;
     position: relative;
     margin-top: 380px;
     text-align: center;
@@ -118,25 +153,125 @@ input[type="text"]{
     font-size: 0.8em;
 }
 .container-three img{
-    box-shadow: 0px 2px 20px #aaaaaa;
+    box-shadow: 0px 2px 15px #aaaaaa;
     border: 0px;
 }
+.content-two{
+    position: relative;
+    top: 20px;
+}
 .person{
-    margin-top: 50px;
+    margin-top: 80px;
+    display: flex;
+    flex-direction: row;
+    margin-left: 250px;
+}
+@media screen and (max-width: 800px){
+    .person{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-left: 0px;
+    }
+    .second-person{
+        margin-top: 30px;
+    }
+    
+}
+.person img{
+  max-width: 100%;
+  height: 60%;
 }
 .first-person{
-    float: left;
-    margin-left: 250px;
-    text-align: left;
+    text-align: center;
 }
 .second-person{
-    float: left;
-    margin-top: 80px;
-    margin-left: 525px;
-    position: absolute;
+    margin-top: 60px;
+    z-index: 2;
 }
 .third-person{
-    float: left;
-    margin-left: 250px;
-    text-align: right;
+    text-align: center;
+}
+.design{
+    position: absolute;
+    width: 100%;
+    height: 90%;
+    background-color: #E9EBE6;
+    transform: skewY(-20deg);
+    z-index: -2;
+    top: 800px;
+    opacity: 0.2;
+}
+.container-four{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+#design-two{
+    position: absolute;
+    z-index: -2;
+    background-color: #E9EBE6;
+    width: 40%;
+    height: 30%;
+    margin-left: 300px;
+    
+}
+.video-image img{
+    margin-left: 180px;
+    
+}
+.video-caption p{
+    text-align: center;
+    font-size: 2.6em;   
+    margin-left: 100px;
+}
+.shadow{
+    position: absolute;
+    background-color: black;
+    color: white;
+    width: 600px;
+    height: 500px;
+    opacity: 0.2;
+    left: 180px;
+}
+#shadow-info{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    align-items: center;
+    left: 420px;
+    color: white;
+    
+}
+@media screen and (max-width: 800px){
+    .container-four{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+        margin-top: 50px;
+}
+    .video-image img{
+        width: 400px;
+        height: 400px;
+        margin-left: 0px;
+    }
+    .shadow{
+        width: 400px;
+        height: 400px;
+        left: 42px;
+    }
+    #shadow-info{
+        left: 180px;
+        margin-top: 150px;
+    }
+    #design-two{
+        width: 40%;
+        height: 30%;
+        margin-left: 140px;
+        margin-top: 120px;
+    }
+    .video-caption p{
+    font-size: 2.0em;   
+    margin-left: 0px;
+}
 }
